<resources>
    <string name="app_name">WanAndroid</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="check_update">检查更新</string>
    <string name="about_update">更新说明</string>
    <string name="about_app">欢迎使用干货满满App，现阶段主要集成了干货集中营和玩Android的部分api，谢谢您的使用我将持续迭代开发</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_user_name">用户名</string>
    <string name="prompt_password">密码 </string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="xiandu">闲读推荐</string>
    <string name="main_page">首页</string>
    <string name="fm">FM</string>
    <string name="play_order_sequential">顺序播放</string>
    <string name="jump_ad">跳过广告</string>

</resources>
