<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".change.mvp.about.AboutActivity">

    <TextView
        android:drawableTop="@mipmap/ic_launcher"
        android:gravity="center"
        android:id="@+id/tv_about_version"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        />

    <TextView
        android:gravity="center"
        android:id="@+id/tv_about_check_update"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/check_update"
        android:clickable="true"
        android:focusable="true"/>
    <TextView
        android:gravity="center"
        android:id="@+id/tv_about_update"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/about_update"
        android:clickable="true"
        android:focusable="true"/>
    <TextView
        android:gravity="center"
        android:id="@+id/tv_about_desc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/about_app"/>

</LinearLayout>