<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout_home"
    tools:context="com.example.txl.redesign.main.NewStyleMainActivity"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/fl_main_page_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/rg_bottom_navigation"
            />
        <RadioGroup
            android:id="@+id/rg_bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:background="@color/gray">
            <RadioButton
                android:id="@+id/rb_first"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_page"
                android:gravity="center"
                android:button="@null"
                android:drawableTop="@drawable/tab_home_selector"
                android:drawablePadding="@dimen/dp_2"
                android:textColor="@color/common_text_select"/>
            <RadioButton
                android:id="@+id/rb_second"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/xiandu"
                android:drawableTop="@drawable/tab_dynamic_selector"
                android:button="@null"
                android:gravity="center"
                android:drawablePadding="@dimen/dp_2"
                android:textColor="@color/common_text_select"/>
            <RadioButton
                android:id="@+id/rb_third"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fm"
                android:gravity="center"
                android:button="@null"
                android:drawableTop="@drawable/tab_message_selector"
                android:drawablePadding="@dimen/dp_2"
                android:textColor="@color/common_text_select"/>
        </RadioGroup>
    </RelativeLayout>
    <android.support.design.widget.NavigationView

        android:background="@color/bg_light_gray"
        android:id="@+id/navigationView"
        app:itemTextColor="@color/selector_nav_menu_text_color"
        android:layout_gravity="left"
        app:itemIconTint="@color/theme_redbase_nav_menu_icontint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_nav">
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>